# onnxruntime-genai

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .ignore  .lintrunner.toml  CMakeLists.txt  CMakePresets.json  CODEOWNERS  DEVELOPMENT.md  README.md  README2.md  ThirdPartyNotices.txt  VERSION_INFO  architecture.md  build.bat  build.py  build.sh  cleaner.py  download_llama.py  download_test_model.bat  download_test_model.py  em-test.yml  feature_spec.md  generate_dml_shaders.bat  hh.txt  install_ort.bat  install_ort.sh  iterative_schedule.py  nuget.config  onnxruntime-genai-c.podspec  onnxruntime-genai-objc.podspec  onnxruntime-genai.csproj  onnxruntime-genai.sln  package-lock.json  package.json  packages.config  pyproject.toml  qwen_3.6.md  (+5 more)
Generators/: CMakeLists.txt  Generators.cpp  Generators.h  Search.cpp  Search.h  Search_Cuda.cpp  Search_Cuda.h  Sequences.cpp  Sequences.h  TensorShape.cpp  TensorShape.h  Tests.cpp  beam_search_scorer.cpp  beam_search_scorer.h  beam_search_scorer_cuda.cpp  beam_search_scorer_cuda.cu  beam_search_scorer_cuda.cuh  beam_search_scorer_cuda.h  beam_search_topk.cu  debugging.cpp  debugging.h  feeds_fetches_manager.cpp  feeds_fetches_manager.h  generate_impl_base.h  generation_device_helper.cpp  generation_device_helper.h  gpt.cpp  gpt.h  gpt_cuda.cpp  gpt_cuda.cu  gpt_cuda.h  greedy_search_impl_base.h  greedy_search_impl_gpt.h  install-onnxruntime.bat  logits_processor.cpp  logits_processor.h  main.cpp  onnxruntime_cxx_api_2.h  onnxruntime_cxx_inline_2.h  sampling_cpu_helper.h  (+10 more)
benchmark/c/: CMakeLists.txt  cpu_utils.h  main.cpp  options.cpp  options.h  readme.md  resource_utils.h
custom_ops/: CMakeLists.txt  fast_gelu2.h  fast_gelu_impl2.cu  fast_gelu_impl2.cuh  genai_ops.cc  genai_ops_registry.cc  paged_attention.h  paged_attention_impl.h  paged_dtype_float32.cuh  paged_utils.cuh
examples/c/: .gitignore  CMakeLists.txt  NPU.md  README.md  build.py
server/: CMakeLists.txt  README.md  generator.cpp  generator.h  server.cpp
src/: .clang-tidy  CMakeLists.txt  Doxyfile  base_speculative_strategy.cpp  base_speculative_strategy.h  batch_asr.h  beam_search_scorer.cpp  beam_search_scorer.h  beam_search_scorer_cuda.cpp  beam_search_scorer_cuda.cu  beam_search_scorer_cuda.cuh  beam_search_scorer_cuda.h  beam_search_topk.cu  beam_search_topk.h  config.cpp  config.h  config_parser.cpp  config_utils.cpp  config_utils.h  constrained_logits_processor.cpp  constrained_logits_processor.h  cuda_common.h  cuda_sampling.cu  cuda_sampling.cuh  decoding_strategy.cpp  decoding_strategy.h  device.cpp  device.h  dll_load_error.cpp  dll_load_error.h  engine.cpp  engine.h  engine_utils.cpp  engine_utils.h  env_utils.h  file_path.h  filesystem.h  flatbuffers.h  generators.cpp  generators.h  (+92 more)
src/amdgpu/: interface.cpp  interface.h  session_options.cpp  session_options.h
src/cpu/: interface.cpp  interface.h
src/csharp/: Adapters.cs  Audios.cs  ChatClient.cs  ChatClientConfiguration.cs  Config.cs  Doxyfile_csharp.cfg  Exceptions.cs  Generator.cs  GeneratorParams.cs  ImageGeneratorParams.cs  Images.cs  Microsoft.ML.OnnxRuntimeGenAI.csproj  Microsoft.ML.OnnxRuntimeGenAI.sln  Model.cs  MultiModalProcessor.cs  NativeMethods.cs  OnnxRuntimeGenAIChatClient.cs  OnnxRuntimeGenAIChatClientOptions.cs  README.md  Result.cs  Sequences.cs  SignalProcessor.cs  SpeculativeStats.cs  StreamingASR.cs  StreamingAudioProcessor.cs  StreamingProcessor.cs  Tensor.cs  Tokenizer.cs  TokenizerStream.cs  Utils.cs  mac_nuget_pkg.nuspec  onnxruntime-genai.snk
src/cuda/: beam_search_scorer_cuda.cpp  beam_search_scorer_cuda.cu  beam_search_scorer_cuda.cuh  beam_search_scorer_cuda.h  beam_search_topk.cu  cuda_common.h  cuda_sampling.cu  cuda_sampling.cuh  cuda_sampling.h  cuda_topk.cu  cuda_topk.h  cuda_topk_benchmark.cuh  cuda_topk_benchmark_cache.h  cuda_topk_bitonic_sort_helper.cuh  cuda_topk_cascaded_sort.cuh  cuda_topk_common.cuh  cuda_topk_distributed_select_sort.cuh  cuda_topk_distributed_sort.cuh  cuda_topk_flash_convergent.cuh  cuda_topk_flash_sort.cuh  cuda_topk_full_sort.cuh  cuda_topk_hybrid_sort.cuh  cuda_topk_iterative_sort.cuh  cuda_topk_llm_sort.cuh  cuda_topk_partition_sort.cuh  cuda_topk_per_batch_radix_sort.cuh  cuda_topk_radix_sort.cuh  cuda_topk_select_sort.cuh  cuda_topk_select_sort_distributed.cuh  cuda_topk_softmax.cuh  cuda_topk_sort_benchmark_cache.h  cuda_topk_stable_sort_helper.cuh  cuda_topk_threshold.cuh  cuda_topk_warp_merge_helper.cuh  cuda_topk_warp_sort_helper.cuh  debugging.cpp  exported_symbols.lst  interface.cpp  interface.h  kernels.h  (+12 more)
src/custom_ops/: genai_ops2.cc  paged_attention.h  paged_attention_impl.cu  paged_attention_impl.h  paged_dtype_float16.cuh  paged_generic.cuh
src/dll/: onnxruntime-genai.rc  shared_library_anchor.cpp
src/dml/: dml_adapter_info.cpp  dml_adapter_info.h  dml_adapter_selection.cpp  dml_adapter_selection.h  dml_allocator.cpp  dml_allocator.h  dml_command_allocator_ring.h  dml_command_queue.cpp  dml_command_recorder.cpp  dml_command_recorder.h  dml_descriptor_pool.cpp  dml_descriptor_pool.h  dml_execution_context.cpp  dml_execution_context.h  dml_gpu_event.h  (+15 more)
test/: CMakeLists.txt  README.md  c_api.cpp  c_api_tests.cpp  config_helpers_test.cpp  config_package_test.cpp  config_tests.cpp  controller_hook_tests.cpp  create_gqa_model.py  cuda_sampling_benchmark.cpp  cuda_sampling_tests.cpp  ep_registration.h  flow_interpreter_test.cpp  gtest_main.cpp  guidance_tests.cpp  json_merge_patch_test.cpp  logits_processor_chain_tests.cpp  logits_processor_tests.cpp  lora_adapter_tests.cpp  main.cpp  model_package_test.cpp  model_tests.cpp  n_gram_decoding_strategy_tests.cpp  n_gram_lookup_tests.cpp  narrow_test.cpp  one_op_model_tests.cpp  pipeline_config_schema_test.cpp  pipeline_config_tests.cpp  pipeline_dispatch_tests.cpp  pipeline_flow_tests.cpp  plugin_loader_tests.cpp  reinit_tests.cpp  runtime_feature_namespace_tests.cpp  runtime_settings_test.cpp  sampling_benchmark.cpp  sampling_tests.cpp  speculative_decoding_tests.cpp  speculative_sampling_tests.cpp  stable_diffusion_tests.cpp  static_scatter_golden.h  (+17 more)
(+1721 files in other folders)
